<?xml version="1.0" encoding="utf-8"?>
    <!-- LinearLayout to hold all child views in a vertical stack -->
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:context=".MainActivity"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

<!--        <ImageView-->
<!--            android:id="@+id/signup_image_view"-->
<!--            android:layout_width="175dp"-->
<!--            android:layout_height="174dp"-->
<!--            android:src="@drawable/signup_image_view"-->
<!--            android:layout_gravity="center_horizontal" />-->

        <TextView
            android:id="@+id/welcome_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/work_sans_bold"
            android:text="Welcome!"
            android:textAlignment="center"
            android:textSize="40sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_weight="1"


            />

        <EditText
            android:id="@+id/first_name_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_background"
            android:elevation="6dp"
            android:fontFamily="@font/work_sans_regular"
            android:hint="First Name"
            android:padding="12dp"
            android:textSize="20sp" />
        <View
        android:layout_width="match_parent"
        android:layout_height="10dp"
        />
        <EditText
            android:id="@+id/last_name_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_background"
            android:elevation="6dp"
            android:fontFamily="@font/work_sans_regular"
            android:hint="Last Name"
            android:padding="12dp"
            android:textSize="20sp" />
    <View
        android:layout_width="match_parent"
        android:layout_height="10dp"
        />


        <EditText
            android:id="@+id/email_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_background"
            android:elevation="6dp"
            android:fontFamily="@font/work_sans_regular"
            android:hint="@string/email"
            android:padding="12dp"
            android:textSize="20sp" />
    <View
        android:layout_width="match_parent"
        android:layout_height="10dp"
        />

        <EditText
            android:id="@+id/password_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_background"
            android:drawableEnd="@drawable/baseline_visibility_24"
            android:elevation="6dp"
            android:fontFamily="@font/work_sans_regular"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="12dp"
            android:textSize="20sp" />
    <View
        android:layout_width="match_parent"
        android:layout_height="10dp"
        />

        <EditText
            android:id="@+id/confirm_password_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_background"
            android:drawableEnd="@drawable/baseline_visibility_24"
            android:elevation="6dp"
            android:fontFamily="@font/work_sans_regular"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:padding="12dp"
            android:textSize="20sp" />
    <View
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:layout_weight="2"
        />

        <Button
            android:id="@+id/sign_up_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_background"
            android:elevation="12dp"
            android:fontFamily="@font/work_sans_medium"
            android:padding="10dp"
            android:text="@string/sign_up"
            android:textColor="@android:color/white"
            android:textSize="21sp"
            android:translationZ="12dp"
            android:textAllCaps="false"
            app:backgroundTint="@color/primary_color" />
    <View
        android:layout_width="match_parent"
        android:layout_height="10dp"
        />

        <Button
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_background"
            android:elevation="12dp"
            android:padding="10dp"
            android:text="@string/login"
            android:textColor="@color/primary_color"
            android:textSize="21sp"
            android:fontFamily="@font/work_sans_medium"

            android:textAllCaps="false"
            android:translationZ="12dp"
            app:backgroundTint="@android:color/white" />
    <View
        android:layout_width="match_parent"
        android:layout_height="10dp"

        />

        <Button
            android:id="@+id/continue_with_google_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_background"
            android:drawableLeft="@drawable/google_icon"
            android:elevation="12dp"
            android:layout_gravity=""
            android:fontFamily="@font/work_sans_medium"
            android:padding="10dp"
            android:text="@string/continue_with_google"
            android:textColor="@color/black"
            android:textSize="21sp"
            android:textAllCaps="false"
            android:translationZ="12dp"
            app:backgroundTint="@android:color/white" />

    </LinearLayout>

