<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="20dp"
    android:elevation="0dp"
    android:layout_margin="20dp"
    app:cardElevation="0dp"
    xmlns:android="http://schemas.android.com/apk/res/android">
<LinearLayout

    android:layout_width="match_parent"
    android:padding="10dp"
    android:background="@color/background_color"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <EditText
        android:id="@+id/et_member_name"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:autofillHints=""
        android:background="@drawable/input_add_project"
        android:fontFamily="@font/work_sans_regular"
        android:inputType="text"
        android:paddingHorizontal="25dp"
        android:paddingVertical="15dp"
        android:shadowColor="#0d000000"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="10"
        android:hint="@string/member_name"
        android:textColorHint="#B2B2B2"
        android:textSize="17sp"
        tools:ignore="LabelFor" />
    <LinearLayout
        android:paddingHorizontal="20dp"
        android:layout_width="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"

        android:layout_height="match_parent">
        <View
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="0.5dp"
            android:background="#B2B2B2"/>
        <View
            android:layout_width="10dp"
            android:layout_height="match_parent"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="22dp"
            android:text="Or"
            android:fontFamily="@font/work_sans_regular"
            android:textSize="14sp"
            android:textColor="#B2B2B2"
            />
        <View
            android:layout_width="10dp"
            android:layout_height="match_parent"
            />
        <View
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="0.5dp"
            android:background="#B2B2B2"/>

    </LinearLayout>

    <EditText
        android:id="@+id/et_member_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:autofillHints=""
        android:background="@drawable/input_add_project"
        android:fontFamily="@font/work_sans_regular"
        android:inputType="text"
        android:paddingHorizontal="25dp"
        android:paddingVertical="15dp"

        android:shadowColor="#0d000000"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="10"
        android:hint="@string/member_email"
        android:textColorHint="#B2B2B2"
        android:textSize="17sp"
        tools:ignore="LabelFor,TextFields" />

    <View
        android:layout_width="match_parent"
        android:layout_height="10dp"/>
    <CheckBox
        android:id="@+id/customCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:text="@string/add_as_admin"
        android:textSize="14sp"

        android:fontFamily="@font/work_sans_medium"

         />
    <View
        android:layout_width="match_parent"
        android:layout_height="10dp"/>
    <androidx.cardview.widget.CardView
        android:id="@+id/btn_invite"
        app:cardCornerRadius="20dp"
        android:elevation="0dp"
        app:cardElevation="0dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:background="#0087FF"
            android:gravity="center"
            android:padding="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:fontFamily="@font/work_sans_semi_bold"
                android:text="@string/invite"
                />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>

</androidx.cardview.widget.CardView>